# Agentic_Agent

./: .env .example  .gitignore  Makefile  README.md  agentic_analyst.db  alembic.ini  copy_correct_db.py  create_postgres_test_tables.py  create_sqlite_from_ reasonable.py  create_tables.py  delete_user.py  environment.yml  fake_data.py  init_db.py  load_data_to_db.py  main.py  main2.py  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt  updated.xlsx
agents/: __init__.py  analytics_agent.py  autonomous_analyst.py  insight_agent.py  model_router.py  planner_agent.py  schema_mapper.py  visualization_agent.py
app/: config.py  main.py
automation/: email_service.py  report_scheduler.py
connectors/: __init__.py  data_loader.py  database_connector.py  excel_connector.py  google_sheets.py
docker/: .dockerignore  DockerFile.prod  Dockerfile  Dockerfile.dev  Dockerfile.prod  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
frontend/: .env.example  .env.production  package-lock.json  package.json
miscellaneous/: convert_csv_to_sqlite.py  create_mysql_test_tables.py  create_reasonable_test_file.py  create_sqlite_db.py  generate_random_key.py  manage_docker.py  test_direct.py  test_email.py  test_main.py  test_sqlalchemy_minimal.py
scripts/: agentic_analyst.db  benchmark_prompts.py  encrypt_existing_data.py  generate_keys.py  health_check.py  init_db.py  init_secrets.py  migrate_database.py  migrate_secrets.py  seed_test_postgres.py  verify_security.py
tests/: conftest.py  test_environment.py  test_prompts.py  test_schema_mapper.py  test_visualization_agent.py
(+208 files in other folders)
